--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 </head>
 <body>
     <h1>Passing Graphs</h1>
-    <svg width="500" height="300"></svg>
+    <svg id='graph1' width="500" height="300"></svg>
+    <svg id='graph2' width="500" height="300"></svg>
+    <svg id='graph3' width="500" height="300"></svg>
+    <svg id='graph4' width="500" height="300"></svg>
+    <svg id='graph5' width="500" height="300"></svg>
     <script src="//d3js.org/d3.v4.min.js"></script>
     <script src='index.js'></script>
 </body>
