supports floating point data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <svg id='graph3' width="500" height="300"></svg>
     <svg id='graph4' width="500" height="300"></svg>
     <svg id='graph5' width="500" height="300"></svg>
+    <svg id='graph6' width="500" height="300"></svg>
     <script src="//d3js.org/d3.v4.min.js"></script>
     <script src='index.js'></script>
 </body>
